--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -7,15 +7,16 @@
     port 24224
 
 [OUTPUT]
-    Name es
+    Name opensearch
     Match **
     Host opensearch
     Port 9200
     # When Logstash_Format is enabled, the Index name is composed using a prefix and the date
     Logstash_Format True
-    HTTP_User admin
-    HTTP_Passwd admin
-    tls On
+#    HTTP_User admin
+#    HTTP_Passwd admin
+#    tls On
+    Suppress_Type_Name On
     tls.verify Off
     # Alternative time key, useful if your log entries contain an @timestamp field that is used by Elasticsearch
     # Time_Key es_time
