--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,12 @@ services:
     image: opensearchproject/opensearch-dashboards:2.18.0
     depends_on:
       - opensearch
-    # web ui
-    # username: kibanaserver
-    # password: kibanaserver  
     ports:
       - 5601:5601
     environment:
       OPENSEARCH_HOSTS: '["http://opensearch:9200"]'
+      # https://stackoverflow.com/a/74178195
+      DISABLE_SECURITY_DASHBOARDS_PLUGIN: true
     restart: unless-stopped
 
   fluentbit:
