--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -1,10 +1,27 @@
 [SERVICE]
     log_level debug
+    Parsers_File /fluent-bit/etc/parsers.conf
 
 [INPUT]
     Name forward
     Listen 0.0.0.0
     port 24224
+
+[FILTER]
+#    Name parser
+#    Match *
+#    Parser json_ecs
+#    Reserve_Data on
+#    Key_Name
+    Name  stdout
+    Match *
+
+[FILTER]
+    Name parser
+    Match *
+    Parser json_ecs
+    Reserve_Data on
+    Key_Name log
 
 [OUTPUT]
     Name opensearch
