--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,11 +49,15 @@ services:
     restart: unless-stopped
 
   app:
-    image: springcommunity/spring-framework-petclinic:5.3.0
+    # https://github.com/spring-projects/spring-petclinic/tree/main?tab=readme-ov-file#building-a-container
+    image: docker.io/library/spring-petclinic:3.4.0-SNAPSHOT
     depends_on:
       - fluentbit
     ports:
       - 8080:8080
+    # https://spring.io/blog/2024/08/23/structured-logging-in-spring-boot-3-4
+    environment:
+      logging.structured.format.console: 'ecs'
     logging:
       driver: "fluentd"
       options:
