--- a/config/fluentbit/parsers.conf
+++ b/config/fluentbit/parsers.conf
@@ -1,5 +1,8 @@
 [PARSER]
     Name   json_ecs
     Format json
-    Time_Key    @timestamp
-    Time_Format %Y-%m-%dT%H:%M:%S.%fZ
+#    the nanosecond presecion is preserved only without parsing time
+#    Time_Key @timestamp
+#    https://docs.fluentbit.io/manual/pipeline/parsers/configuring-parser#time-resolution-and-fractional-seconds
+#    Time_Format %Y-%m-%dT%H:%M:%S.%L
+#    Time_Strict false
