--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,10 @@ services:
     ports:
       - 8080:8080
     # https://spring.io/blog/2024/08/23/structured-logging-in-spring-boot-3-4
+    # https://docs.spring.io/spring-boot/reference/features/logging.html#features.logging.structured.customizing-json
     environment:
-      logging.structured.format.console: 'ecs'
+      logging.structured.format.console: 'logstash'
+      logging.structured.json.add.application: 'petclinic'
     logging:
       driver: "fluentd"
       options:
