--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -35,5 +35,8 @@
 #    tls On
     Suppress_Type_Name On
     tls.verify Off
+    Include_Tag_Key True
+    Tag_Key application
+    Generate_ID True
     # Alternative time key, useful if your log entries contain an @timestamp field that is used by Elasticsearch
     # Time_Key es_time
