--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -7,14 +7,10 @@
     Listen 0.0.0.0
     port 24224
 
-[FILTER]
-#    Name parser
-#    Match *
-#    Parser json_ecs
-#    Reserve_Data on
-#    Key_Name
-    Name  stdout
-    Match *
+# for debug purposes
+# [FILTER]
+#     Name  stdout
+#     Match *
 
 [FILTER]
     Name parser
