--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -34,5 +34,8 @@
     Include_Tag_Key True
     Tag_Key application
     Generate_ID True
+    # https://github.com/fluent/fluent-bit/issues/309#issuecomment-311685689
+    Retry_Limit 100
+    Buffer_Size 512MB
     # Alternative time key, useful if your log entries contain an @timestamp field that is used by Elasticsearch
     # Time_Key es_time
