add info about image building

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     restart: unless-stopped
 
   app:
+    # It's need to build it manually
     # https://github.com/spring-projects/spring-petclinic/tree/main?tab=readme-ov-file#building-a-container
     image: docker.io/library/spring-petclinic:3.4.0-SNAPSHOT
     depends_on:
