--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -37,5 +37,6 @@
     # https://github.com/fluent/fluent-bit/issues/309#issuecomment-311685689
     Retry_Limit 100
     Buffer_Size 512MB
+    Trace_Error On
     # Alternative time key, useful if your log entries contain an @timestamp field that is used by Elasticsearch
     # Time_Key es_time
