--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -29,8 +29,8 @@
 #    HTTP_User admin
 #    HTTP_Passwd admin
 #    tls On
+#    tls.verify Off
     Suppress_Type_Name On
-    tls.verify Off
     Include_Tag_Key True
     Tag_Key application
     Generate_ID True
