use unix socket for more security

--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -4,8 +4,10 @@
 
 [INPUT]
     Name forward
-    Listen 0.0.0.0
-    port 24224
+#     Listen 0.0.0.0
+#     port 24224
+    Unix_Path /var/run/fluent-bit/socket
+    Unix_Perm 0777
 
 # for debug purposes
 # [FILTER]
