--- a/config/fluentbit/parsers.conf
+++ b/config/fluentbit/parsers.conf
@@ -1,5 +1,5 @@
 [PARSER]
-    Name   json_ecs
+    Name   just_json
     Format json
 #    the nanosecond presecion is preserved only without parsing time
 #    Time_Key @timestamp
