--- a/config/fluentbit/fluent-bit.conf
+++ b/config/fluentbit/fluent-bit.conf
@@ -1,6 +1,6 @@
 [SERVICE]
     log_level debug
-    Parsers_File /fluent-bit/etc/parsers.conf
+    Parsers_File parsers.conf
 
 [INPUT]
     Name forward
@@ -17,7 +17,7 @@
 [FILTER]
     Name parser
     Match *
-    Parser json_ecs
+    Parser just_json
     Reserve_Data on
     Key_Name log
 
